@@ -30,6 +30,7 @@ import sys
 import time
 import socket, traceback
 import struct
+from datetime import datetime
 from powernap import powernap
 
 
@@ -38,7 +39,7 @@ try:
     powernap = powernap.PowerNap()
     os.putenv("ACTION_METHOD", str(powernap.ACTION_METHOD))
 except:
-    print("Unale to initialize PowerNap")
+    print("Unable to initialize PowerNap")
     sys.exit(1)
 
 # Define globals
@@ -89,7 +90,9 @@ def signal_handler(signal, frame):
 # Send a message to system users, that we're about to take an action,
 # and sleep for a grace period
 def warn_users():
-    msg1 = "PowerNap will take the following action in [%s] seconds: [%s]" % (powernap.GRACE_SECONDS, powernap.ACTION)
+    t = datetime.now()
+    timestamp = "%d-%d-%d %d:%d:%d" % (t.month, t.day, t.year, t.hour, t.minute, t.second)
+    msg1 = "[%s] PowerNap will take the following action in [%s] seconds: [%s]" % (timestamp, powernap.GRACE_SECONDS, powernap.ACTION)
     msg2 = "To cancel this operation, press any key in any terminal"
     debug(logging.WARNING, msg1)
     if powernap.WARN:
